# nrf-remote

./: .gitignore  README.md
remote-pi/: Makefile  README.md
remote-pi/src/: commands.h
remote-pi/src/crypto/: aes.cpp  crypto.cpp  crypto.h
remote-pi/src/packet/: packet.cpp  packet.h
remote-pi/src/radio/: radio.cpp  radio.h
remote-pi/src/transmitter/: main.cpp
remote-pico/: .gitignore  CMakeLists.txt  README.md
remote-pico/src/button/: button.cpp  button.h  togglebutton.cpp
remote-pico/src/crypto/: aes.h  crypto.cpp  crypto.h  random.cpp
remote-pico/src/packet/: packet.cpp  packet.h
remote-pico/src/pin/: pin.cpp  pin.h
remote-pico/src/radio/: radio.cpp  radio.h
remote-pico/src/receiver/: main.cpp  pins.h
remote-pico/src/relay/: main.cpp
remote-pico/src/sleep/: sleep.h
remote-pico/src/transmitter/: main.cpp  pins.h
